--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -11,14 +11,14 @@
 
   <h2>{{mainPageInfo.title}}</h2>
 
-<!--
-  {{#if commands}}
+  {{#if commandInfo}}
     <h3>Commands:</h3>
-    <ul>{{#each commands}}
+    <ul>{{#each commandInfo}}
       <li><a href="/commands/{{id}}">{{description}}</a></li>{{/each}}
     </ul>
   {{/if}}
 
+<!--
   {{#if proxies}}
     <h3>Proxies:</h3>
     <ul>{{#each proxies}}
