Add config endpoint.

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -32,13 +32,12 @@
       <li><a href="/proxies/{{id}}">{{description}}</a></li>{{/each}}
     </ul>
   {{/if}}
+-->
 
   <h3>Debugging:</h3>
   <ul>
-    <li><a href="/configuration">configuration</a></li>
-    <li><a href="/environment">environment</a></li>
+    <li><a href="/config">configuration</a></li>
   </ul>
--->
 
   <hr>
 
