--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -37,6 +37,7 @@
   <h3>Debugging:</h3>
   <ul>
     <li><a href="/config">configuration</a></li>
+    <li><a href="/environment">environment</a></li>
   </ul>
 
   <hr>
