--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -38,6 +38,7 @@
   <ul>
     <li><a href="/config">configuration</a></li>
     <li><a href="/environment">environment</a></li>
+    <li><a href="/memory">memory</a></li>
   </ul>
 
   <hr>
