--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -36,9 +36,10 @@
 
   <h3>Debugging:</h3>
   <ul>
-    <li><a href="/config">configuration</a></li>
-    <li><a href="/environment">environment</a></li>
-    <li><a href="/memory">memory</a></li>
+    <li><a href="/debug/config">configuration</a></li>
+    <li><a href="/debug/environment">environment</a></li>
+    <li><a href="/debug/gc">gc</a></li>
+    <li><a href="/debug/memory">memory</a></li>
   </ul>
 
   <hr>
