--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -40,6 +40,7 @@
     <li><a href="/debug/environment">environment</a></li>
     <li><a href="/debug/gc">gc</a></li>
     <li><a href="/debug/memory">memory</a></li>
+    <li><a href="/debug/netty">netty</a></li>
     <li><a href="/debug/thread">thread</a></li>
   </ul>
 
